instructions.Instructions.scala.error
Compilation error:
Instructions:35: error: Unmatched closing brace '}' ignored here
	}
        ^